# w01-projeto-processo-de-dados-do-zero

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: colunas_extras.xlsx  correto.xlsx  errado.xlsx  multiplos_erros.xlsx
src/: app.py  backend.py  contrato.py  frontend.py
tests/: test_contrato.py  test_funcional.py  test_integracao.py
